Fix flex wrap

--- a/ckanext/xcaret/assets/css/xcaret.css
+++ b/ckanext/xcaret/assets/css/xcaret.css
@@ -11656,6 +11656,7 @@ html {
   flex-direction: row;  
   padding-top: 10px;
   padding-bottom: 10px;
+  flex-wrap: wrap;
 }
 
 @media (max-width: 880px) {
